fix: associate transactions and summaries to user